--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,12 @@
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
     <script src="./js/menu.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <!-- <script src="./js/modal.js"></script> -->
+    <script src="./js/slider.js"></script>
+    <script src="./js/scroll.js"></script>
   </body>
 </html>
 
